Fix page overflow and navbar sizing

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,11 +3,16 @@
   display: grid;
   grid-auto-columns: 10% 40% 40% 10%;
   grid-auto-rows: 20px content 20px;
-  gap: 20px 2em;
 }
 
 .AppHeader {
   grid-column: span 4;
+}
+
+.Content {
+  grid-column: 2 / 3;
+  gap: 20px 2em;
+  padding: 20px;
 }
 
 .CenterLeft {
