--- a/client/src/NavBar.css
+++ b/client/src/NavBar.css
@@ -1,5 +1,5 @@
 #navbar {
-  height: 50px;
+  height: 85px;
   width: 100%;
   background-color: purple;
   color: white;
